--- a/index.html
+++ b/index.html
@@ -100,10 +100,10 @@
     <!-- Hero -->
     <section id="home" class="relative">
       <div class="relative">
-<img src="./assets/img/hero.JPG" alt="Stone-coated roof tiles on modern home" class="h-[72vh] md:h-[78vh] w-full object-cover" />
+        <img src="./docs/hero.png" alt="Stone-coated roof tiles on modern home" class="h-[72vh] md:h-[78vh] w-full object-cover" />
         <div class="absolute inset-0 bg-gradient-to-b from-black/50 via-black/30 to-black/60"></div>
         <div class="absolute inset-0">
-<div class="container max-w-screen-2xl h-full flex items-center">
+          <div class="container max-w-screen-2xl h-full flex items-center">
             <div class="max-w-2xl text-white" data-animate>
               <h1 class="font-heading text-3xl md:text-5xl font-extrabold leading-tight">
                 Your Best Roofing Services company in Ghana
@@ -139,8 +139,8 @@
       <div class="bg-white border-b border-gray-100">
 <div class="container max-w-screen-2xl py-6">
           <div class="flex flex-wrap items-center justify-between gap-6" data-animate>
-            <div class="flex items-center gap-3">
-              <span class="h-8 w-8 rounded-full bg-gradient-to-br from-copper-400 to-copper-600"></span>
+            <div class="flex flex-wrap items-center gap-4 md:gap-5">
+              <img src="./docs/feroof_logo.png" alt="Feroof International logo" class="h-14 md:h-16 lg:h-20 w-auto object-contain shrink-0" />
               <div>
                 <div class="text-sm uppercase tracking-wide text-gray-500">Partnered With</div>
                 <div class="font-heading text-lg">Feroof International</div>
@@ -201,7 +201,7 @@
           </article>
           <!-- Card -->
 <article class="group rounded-xl bg-white shadow-md ring-1 ring-gray-200/70 hover:shadow-lg transition" data-animate>
-            <img src="./assets/img/product-bond.jpg" alt="Bond roof tile profile" class="h-40 w-full rounded-t-lg object-cover" />
+            <img src="./assets/img/product-bound.jpeg" alt="Bond roof tile profile" class="h-40 w-full rounded-t-lg object-cover" />
 <div class="p-5">
               <h3 class="font-heading">Bond</h3>
               <p class="mt-1 text-sm text-gray-600">Strong visual rhythm with excellent weather protection.</p>
@@ -344,6 +344,10 @@
             <li>Email: whitetemple4u2@gmail.com</li>
             <li>Office: No: 65 Derby Avenue, Accra</li>
           </ul>
+          <div class="mt-4 flex flex-wrap gap-3">
+            <a href="https://maps.app.goo.gl/zztjYZXe6gLx6w1Z9?g_st=ic" target="_blank" rel="noopener" class="inline-flex items-center gap-2 rounded-md border border-gray-300 px-4 py-2 text-charcoal hover:bg-gray-50">View on Map</a>
+            <a href="https://maps.app.goo.gl/ju9dT6MZjh4TUhkf7?g_st=ipc" target="_blank" rel="noopener" data-accent class="inline-flex items-center gap-2 rounded-md px-4 py-2 text-white shadow-accent" style="background: linear-gradient(to right, var(--accent-from), var(--accent-to));">Get Directions</a>
+          </div>
         </div>
         <form id="quote-form" class="rounded-xl border border-gray-200/70 p-7 bg-white shadow-sm" novalidate data-animate>
           <div class="grid gap-4">
@@ -383,7 +387,7 @@
         <p class="mt-3 text-gray-700 text-center">Real projects and roof close-ups. Replace with your own photos.</p>
 <div class="mt-8 grid gap-5 sm:grid-cols-2 md:grid-cols-3">
           <img class="rounded-lg object-cover h-48 w-full" src="./assets/img/project-1.JPG" alt="Roofing installation with stone-coated tiles" />
-          <img class="rounded-lg object-cover h-48 w-full" src="./assets/img/product-bond.jpg" alt="Completed home roof with stone-coated tiles" />
+          <img class="rounded-lg object-cover h-48 w-full" src="./assets/img/product-bound.jpeg" alt="Completed home roof with stone-coated tiles" />
           <img class="rounded-lg object-cover h-48 w-full" src="./assets/img/product-shake.jpg" alt="Close-up of roof tiles" />
         </div>
       </div>
@@ -418,6 +422,9 @@
               <li><a href="https://wa.me/233243284859" target="_blank" rel="noopener" class="hover:text-deepgreen">WhatsApp</a></li>
               <li>No: 65 Derby Avenue, Accra</li>
             </ul>
+            <div class="mt-3">
+              <a href="https://maps.app.goo.gl/zztjYZXe6gLx6w1Z9?g_st=ic" target="_blank" rel="noopener" class="inline-flex items-center gap-2 rounded-md border border-gray-300 px-4 py-2 text-charcoal hover:bg-gray-50">View on Map</a>
+            </div>
             <div class="mt-4 flex items-center gap-3 text-gray-500">
               <!-- Social icons -->
               <a href="https://web.facebook.com/whitetempleagencies" aria-label="Facebook" target="_blank" rel="noopener" class="hover:text-deepgreen"><svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" fill="currentColor"><path d="M13.5 9H15V7h-1.5C12.57 7 12 7.57 12 8.5V10H10v2h2v6h2v-6h1.5l.5-2H14v-1c0-.28.22-.5.5-.5z"/></svg></a>
@@ -434,7 +441,7 @@
             </ul>
           </div>
         </div>
-        <div class="mt-8 border-t border-gray-100 pt-6 text-sm text-gray-500">© <span id="year"></span> White Temple Agencies Limited. Partnered with Feroof International. All rights reserved.</div>
+        <div class="mt-8 border-t border-gray-100 pt-6 text-sm text-gray-500">© <span id="year"></span> White Temple Agencies Limited. Partnered with <img src="./docs/feroof_logo.png" alt="Feroof International logo" class="inline-block h-8 md:h-10 w-auto align-middle mx-2" /> Feroof International. All rights reserved.</div>
       </div>
     </footer>
 
