--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <header class="sticky top-0 z-50 bg-white border-b border-gray-100">
 <nav class="container max-w-screen-2xl flex items-center justify-between py-5 md:py-6">
         <a href="#home" class="flex items-center gap-2 group">
-<img src="./docs/white_temple_logo.png" alt="White Temple Agencies logo" class="h-12 w-auto object-contain" />
+<img src="./assets/img/white_temple_logo.png" alt="White Temple Agencies logo" class="h-12 w-auto object-contain" />
           <span class="font-heading text-lg md:text-xl tracking-wide">White Temple Agencies</span>
         </a>
         <button id="mobile-nav-toggle" class="md:hidden inline-flex items-center justify-center rounded-md p-2 text-charcoal hover:bg-gray-100 focus:outline-none" aria-label="Open menu">
@@ -100,7 +100,7 @@
     <!-- Hero -->
     <section id="home" class="relative">
       <div class="relative">
-        <img src="./docs/hero.png" alt="Stone-coated roof tiles on modern home" class="h-[72vh] md:h-[78vh] w-full object-cover" />
+        <img src="./assets/img/hero.png" alt="Stone-coated roof tiles on modern home" class="h-[72vh] md:h-[78vh] w-full object-cover" />
         <div class="absolute inset-0 bg-gradient-to-b from-black/50 via-black/30 to-black/60"></div>
         <div class="absolute inset-0">
           <div class="container max-w-screen-2xl h-full flex items-center">
@@ -140,7 +140,7 @@
 <div class="container max-w-screen-2xl py-6">
           <div class="flex flex-wrap items-center justify-between gap-6" data-animate>
             <div class="flex flex-wrap items-center gap-4 md:gap-5">
-              <img src="./docs/feroof_logo.png" alt="Feroof International logo" class="h-14 md:h-16 lg:h-20 w-auto object-contain shrink-0" />
+              <img src="./assets/img/feroof_logo.png" alt="Feroof International logo" class="h-14 md:h-16 lg:h-20 w-auto object-contain shrink-0" />
               <div>
                 <div class="text-sm uppercase tracking-wide text-gray-500">Partnered With</div>
                 <div class="font-heading text-lg">Feroof International</div>
@@ -399,7 +399,7 @@
         <div class="grid gap-8 md:grid-cols-4">
           <div>
             <div class="flex items-center gap-3">
-<img src="./docs/white_temple_logo.png" alt="White Temple Agencies logo" class="h-12 w-auto object-contain" />
+<img src="./assets/img/white_temple_logo.png" alt="White Temple Agencies logo" class="h-12 w-auto object-contain" />
               <span class="font-heading text-lg">White Temple Agencies Limited</span>
             </div>
             <p class="mt-3 text-sm text-gray-600">Authorized reseller of Ferroof roofing tiles in Ghana.</p>
@@ -441,7 +441,7 @@
             </ul>
           </div>
         </div>
-        <div class="mt-8 border-t border-gray-100 pt-6 text-sm text-gray-500">© <span id="year"></span> White Temple Agencies Limited. Partnered with <img src="./docs/feroof_logo.png" alt="Feroof International logo" class="inline-block h-8 md:h-10 w-auto align-middle mx-2" /> Feroof International. All rights reserved.</div>
+        <div class="mt-8 border-t border-gray-100 pt-6 text-sm text-gray-500">© <span id="year"></span> White Temple Agencies Limited. Partnered with <img src="./assets/img/feroof_logo.png" alt="Feroof International logo" class="inline-block h-8 md:h-10 w-auto align-middle mx-2" /> Feroof International. All rights reserved.</div>
       </div>
     </footer>
 
