fix and improvements

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Montserrat:wght@600;700;800&display=swap" rel="stylesheet" />
 
     <!-- Tailwind (Play CDN for rapid prototyping) -->
+    <!-- Mark document as JS-enabled early to allow progressive animations -->
+    <script>document.documentElement.classList.add('js');</script>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       tailwind.config = {
